# MyAgents

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
plugins/github-repo-creator/.codex-plugin/: plugin.json
plugins/github-repo-creator/scripts/: create_github_repo.py
plugins/github-repo-creator/skills/github-repo-creator/: SKILL.md
src/research_agents/: __init__.py  cli.py  config.py  local_setup.py  tools.py  web.py  workflow.py
tests/: test_local_setup.py  test_web.py  test_workflow.py
